fix dark mode activities

--- a/front/src/app/components/progression-bar/progression-bar.component.scss
+++ b/front/src/app/components/progression-bar/progression-bar.component.scss
@@ -6,6 +6,21 @@
   height: 50px;
   width: 41px;
 
+  &.dark-mode > div.white-background {
+    visibility: visible;    
+  }
+
+  > div.white-background {
+    background-color: white;
+    position: absolute;
+    height: 100%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 4px;
+    visibility: hidden;
+  }
+
   > div {
     position: absolute;
     height: 100%;
