--- a/front/src/app/routes/workforce/workforce.page.scss
+++ b/front/src/app/routes/workforce/workforce.page.scss
@@ -225,6 +225,7 @@
 
     .space {
       flex: 1;
+      min-height: 16px;
     }
   }
 
